--- a/client/src/app/components/accounts-overview/accounts-overview.component.html
+++ b/client/src/app/components/accounts-overview/accounts-overview.component.html
@@ -44,7 +44,10 @@
             Edit
           </button>
           <!-- (click)="deleteUser(user.id)" -->
-          <button class="px-2 py-1 mx-2 bg-red-500 text-white rounded">
+          <button
+            class="px-2 py-1 mx-2 bg-red-500 text-white rounded"
+            (click)="deleteUser(user)"
+          >
             Delete
           </button>
         </td>
