--- a/client/src/app/components/order-detail/order-detail.component.html
+++ b/client/src/app/components/order-detail/order-detail.component.html
@@ -1,75 +1,102 @@
-<section class="gap-3 max-w-[1200px] pb-10 px-5 w-full">
-  <table class="hidden w-full md:table">
-    <thead class="h-16 bg-neutral-100">
-      <tr>
-        <th>ITEM</th>
-        <th>PRICE</th>
-        <th>QUANTITY</th>
-        <th>TOTAL</th>
-      </tr>
-    </thead>
-    <tbody>
-      <ng-container *ngFor="let product of products">
-        <tr class="border-b h-[100px]">
-          <td class="align-middle">
-            <div class="flex">
-              <img
-                class="w-[90px]"
-                src="{{ product.images[0] }}"
-                alt="bedroom image"
-              />
-              <div class="flex flex-col justify-center ml-3">
-                <p class="text-xl font-bold">{{ product.name }}</p>
-                <p class="text-sm text-gray-400">{{ product.desc }}</p>
-              </div>
+@if (isLoading) {
+<app-loading-spinner></app-loading-spinner>
+}
+
+
+<section class="container flex-grow mx-auto max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10">
+
+  <app-sidebar [userInfo]="userInfo"></app-sidebar>
+
+  <section class="container mx-auto my-3 flex w-full flex-col gap-3 px-4 md:hidden">
+    <!-- 1 -->
+    @for (product of products; track $index) {
+    <div class="flex w-full border px-4 py-4">
+      <img class="self-start object-contain" width="90px" src="{{product.images[0]}}" alt="bedroom image" />
+      <div class="ml-3 flex w-full flex-col justify-center">
+        <div class="flex items-center justify-between">
+          <p class="text-xl font-bold">{{product.name}}</p>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
+            <path
+              d="M9.653 16.915l-.005-.003-.019-.01a20.759 20.759 0 01-1.162-.682 22.045 22.045 0 01-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 018-2.828A4.5 4.5 0 0118 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 01-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 01-.69.001l-.002-.001z" />
+          </svg>
+        </div>
+        <!-- <p class="text-sm text-gray-400">Size: XL</p> -->
+        <p class="py-3 text-xl font-bold text-violet-900">${{product.price}}</p>
+        <div class="mt-2 flex w-full items-center justify-between">
+          <div class="flex items-center justify-center">
+            <div class="flex cursor-text items-center justify-center active:ring-gray-500">
+              Quantity: {{product.count}}
             </div>
-          </td>
-          <td class="mx-auto text-center">{{ product.price }}</td>
-          <td class="text-center align-middle">{{ product.count }}</td>
-          <td class="mx-auto text-center">
-            {{ product.price * product.count }}
-          </td>
-        </tr>
-      </ng-container>
-    </tbody>
-  </table>
-  <section class="flex flex-col w-full gap-4 my-5 lg:flex-row">
-    <div class="lg:w-1/2">
-      <div class="px-4 py-5 border shadow-md">
-        <p class="font-bold">ORDER SUMMARY</p>
-        <div class="flex justify-between py-5 border-b">
-          <p>Subtotal</p>
-          <p>{{ selectedOrder.totalPrice }}</p>
+          </div>
         </div>
-        <div class="flex justify-between py-5 border-b">
-          <p>Shipping</p>
-          <p>Free</p>
-        </div>
-        <div class="flex justify-between py-5">
-          <p>Total</p>
-          <p>{{ selectedOrder.totalPrice }}</p>
-        </div>
-        <button
-          *ngIf="selectedOrder.status === 'pending'"
-          (click)="cancelOrder(selectedOrder._id)"
-          class="w-40 px-4 py-2 mt-4 text-white bg-green-900"
-          class="w-40 px-4 py-2 mt-4 text-white bg-red-900"
-        >
-          Cancel Order
-        </button>
       </div>
     </div>
-    <div class="lg:w-1/2">
-      <div class="px-4 py-5 border shadow-md">
-        <p class="font-bold">ORDER INFORMATION</p>
-        <div>
-          <p>Order #{{ selectedOrder._id | slice : -8 }}</p>
+    }
+  </section>
+
+  <section class="gap-3 max-w-[1200px] pb-10 px-5 w-full">
+    <table class="hidden w-full md:table">
+      <thead class="h-16 bg-neutral-100">
+        <tr>
+          <th>ITEM</th>
+          <th>PRICE</th>
+          <th>QUANTITY</th>
+          <th>TOTAL</th>
+        </tr>
+      </thead>
+      <tbody>
+        <ng-container *ngFor="let product of products">
+          <tr class="border-b h-[100px]">
+            <td class="align-middle">
+              <div class="flex">
+                <img class="w-[90px]" src="{{ product.images[0] }}" alt="bedroom image" />
+                <div class="flex flex-col justify-center ml-3">
+                  <p class="text-xl font-bold">{{ product.name }}</p>
+                  <!-- <p class="text-sm text-gray-400">size: {{ product.size.join(" ") }}</p> -->
+                </div>
+              </div>
+            </td>
+            <td class="mx-auto text-center">${{ product.price }}</td>
+            <td class="text-center align-middle">{{ product.count }}</td>
+            <td class="mx-auto text-center">
+              ${{ product.price * product.count }}
+            </td>
+          </tr>
+        </ng-container>
+      </tbody>
+    </table>
+    <section class="flex flex-col w-full gap-4 my-5 lg:flex-row">
+      <div class="lg:w-1/2">
+        <div class="px-4 py-5 border shadow-md">
+          <p class="font-bold">ORDER SUMMARY</p>
+          <div class="flex justify-between py-5 border-b">
+            <p>Subtotal</p>
+            <p>${{ selectedOrder.totalPrice }}</p>
+          </div>
+          <div class="flex justify-between py-5 border-b">
+            <p>Shipping</p>
+            <p>Free</p>
+          </div>
+          <div class="flex justify-between py-5">
+            <p>Total</p>
+            <p>${{ selectedOrder.totalPrice }}</p>
+          </div>
+          <button *ngIf="selectedOrder.status === 'pending'" (click)="cancelOrder(selectedOrder._id)"
+            class="w-40 px-4 py-2 mt-4 text-white bg-green-900" class="w-40 px-4 py-2 mt-4 text-white bg-red-900">
+            Cancel Order
+          </button>
         </div>
-        <div class="flex flex-col py-5 border-b">
-          <p>
-            Status:
-            <span
-              class="font-bold text-{{
+      </div>
+      <div class="lg:w-1/2">
+        <div class="px-4 py-5 border shadow-md">
+          <p class="font-bold">ORDER INFORMATION</p>
+          <div>
+            <p>Order #{{ selectedOrder._id | slice : -8 }}</p>
+          </div>
+          <div class="flex flex-col py-5 border-b">
+            <p>
+              Status:
+              <span class="font-bold text-{{
                 selectedOrder.status === 'accepted'
                   ? 'green'
                   : selectedOrder.status === 'pending'
@@ -77,20 +104,20 @@
                   : selectedOrder.status === 'rejected'
                   ? 'red'
                   : 'gray'
-              }}-600"
-              >{{ selectedOrder.status | uppercase }}</span
-            >
-          </p>
-          <p>Date: {{ selectedOrder.date }}</p>
-        </div>
-        <div></div>
-        <div class="flex flex-col py-5">
-          <p class="font-bold">ADDRESS INFORMATION</p>
-          <p>City: {{ selectedOrder.address.city }}</p>
-          <p>Street: {{ selectedOrder.address.street }}</p>
-          <p>Zip-Code: {{ selectedOrder.address.zip }}</p>
+              }}-600">{{ selectedOrder.status | uppercase }}</span>
+            </p>
+            <p>Date: {{ selectedOrder.date }}</p>
+          </div>
+          <div></div>
+          <div class="flex flex-col py-5">
+            <p class="font-bold">ADDRESS INFORMATION</p>
+            <p>City: {{ selectedOrder.address.city }}</p>
+            <p>Street: {{ selectedOrder.address.street }}</p>
+            <p>Zip-Code: {{ selectedOrder.address.zip }}</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
   </section>
+
 </section>
