--- a/client/src/app/layouts/check-out/check-out.component.html
+++ b/client/src/app/layouts/check-out/check-out.component.html
@@ -1,7 +1,5 @@
 <div class="flex-grow">
-  <section
-    class="container mx-auto max-w-[1200px] py-5 lg:flex lg:flex-row lg:py-10"
-  >
+  <section class="container mx-auto max-w-[1200px] py-5 lg:flex lg:flex-row lg:py-10">
     <h2 class="px-5 mx-auto text-2xl font-bold md:hidden">Complete Address</h2>
     <section class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10">
       <table class="hidden lg:table">
@@ -24,38 +22,25 @@
       </table>
 
       <ng-container *ngIf="currentStep === 1">
-        <app-address
-          (streetChange)="setStreet($event)"
-          (cityChange)="setCity($event)"
-          (zipChange)="setZip($event)"
-        ></app-address>
+        <app-address (streetChange)="setStreet($event)" (cityChange)="setCity($event)"
+          (zipChange)="setZip($event)"></app-address>
       </ng-container>
       <ng-container *ngIf="currentStep === 2">
         <app-delivery (isChecked)="setIsCheck($event)"></app-delivery>
       </ng-container>
       <ng-container *ngIf="currentStep === 3">
-        <app-payment
-          (cardHolder)="setCardHolder($event)"
-          (cardNumber)="setCardNumber($event)"
-          (expirationDate)="setExpirationDate($event)"
-          (cvv)="setCvv($event)"
-        ></app-payment>
+        <app-payment (cardHolder)="setCardHolder($event)" (cardNumber)="setCardNumber($event)"
+          (expirationDate)="setExpirationDate($event)" (cvv)="setCvv($event)"></app-payment>
       </ng-container>
       <ng-container *ngIf="currentStep === 4">
         <app-review [products]="cart"></app-review>
       </ng-container>
 
       <div class="flex items-center justify-between w-full">
-        <a routerLink="/cart" class="hidden text-sm lg:block text-violet-900"
-          >← Back to the shop</a
-        >
+        <a routerLink="/cart" class="hidden text-sm lg:block text-violet-900">← Back to the shop</a>
         <div class="flex justify-center gap-2 mx-auto lg:mx-0">
-          <a
-            (click)="prevStep()"
-            class="px-4 py-2 text-white bg-purple-900"
-            [ngClass]="{ hidden: currentStep === 1 }"
-            >Previous step</a
-          >
+          <a (click)="prevStep()" class="px-4 py-2 text-white bg-purple-900"
+            [ngClass]="{ hidden: currentStep === 1 }">Previous step</a>
           <a (click)="nextStep()" class="px-4 py-2 text-white bg-amber-400">
             {{ currentStep === 4 ? "Place Order" : "Next Step" }}
           </a>
@@ -71,7 +56,7 @@
 
           <div class="flex justify-between py-5 border-b">
             <p>Subtotal</p>
-            <p>{{ order.totalPrice }}</p>
+            <p>${{ order.totalPrice }}</p>
           </div>
 
           <div class="flex justify-between py-5 border-b">
@@ -81,33 +66,20 @@
 
           <div class="flex justify-between py-5">
             <p>Total</p>
-            <p>{{ order.totalPrice }}</p>
+            <p>${{ order.totalPrice }}</p>
           </div>
         </div>
       </div>
     </section>
   </section>
 
-  <section
-    class="container flex flex-col justify-center gap-3 mx-auto my-8 lg:flex-row"
-  >
-    <div
-      class="flex flex-row items-center justify-center px-5 py-4 mx-5 border-2 border-yellow-400"
-    >
+  <section class="container flex flex-col justify-center gap-3 mx-auto my-8 lg:flex-row">
+    <div class="flex flex-row items-center justify-center px-5 py-4 mx-5 border-2 border-yellow-400">
       <div class="">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-6 h-6 text-violet-900 lg:mr-2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-          />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="w-6 h-6 text-violet-900 lg:mr-2">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
         </svg>
       </div>
 
@@ -118,23 +90,12 @@
         </p>
       </div>
     </div>
-    <div
-      class="flex flex-row items-center justify-center px-5 py-4 mx-5 border-2 border-yellow-400"
-    >
+    <div class="flex flex-row items-center justify-center px-5 py-4 mx-5 border-2 border-yellow-400">
       <div class="">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-6 h-6 text-violet-900 lg:mr-2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 003 15h-.75M15 10.5a3 3 0 11-6 0 3 3 0 016 0zm3 0h.008v.008H18V10.5zm-12 0h.008v.008H6V10.5z"
-          />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="w-6 h-6 text-violet-900 lg:mr-2">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 003 15h-.75M15 10.5a3 3 0 11-6 0 3 3 0 016 0zm3 0h.008v.008H18V10.5zm-12 0h.008v.008H6V10.5z" />
         </svg>
       </div>
 
@@ -143,23 +104,12 @@
         <p class="text-xs text-left text-light lg:text-sm">30 Days guarantee</p>
       </div>
     </div>
-    <div
-      class="flex flex-row items-center justify-center px-5 py-4 mx-5 border-2 border-yellow-400"
-    >
+    <div class="flex flex-row items-center justify-center px-5 py-4 mx-5 border-2 border-yellow-400">
       <div class="">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-6 h-6 text-violet-900 lg:mr-2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z"
-          />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="w-6 h-6 text-violet-900 lg:mr-2">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
         </svg>
       </div>
 
