refactor: made the needed refinement

--- a/client/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -17,6 +17,9 @@
       <li class="bg-amber-400 p-3 text-black text-xl font-bold rounded-lg">
         <a routerLink="/admin-dashboard/products-overview">Products Overview</a>
       </li>
+      <li class="bg-red-500 p-3 text-white text-xl text-center font-bold rounded-lg">
+        <a (click)="logout()">Logout</a>
+      </li>
     </ul>
   </div>
 
