--- a/client/src/app/layouts/signup/signup.component.html
+++ b/client/src/app/layouts/signup/signup.component.html
@@ -54,7 +54,7 @@
       <input
         id="password"
         class="mt-3 border px-4 py-2"
-        type="text"
+        type="password"
         formControlName="password"
         required
         placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;"
@@ -64,7 +64,7 @@
       <input
         id="Confirmpassword"
         class="mt-3 border px-4 py-2"
-        type="text"
+        type="password"
         formControlName="passwordConfirm"
         required
         placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;"
