--- a/client/src/app/layouts/product-overview/product-overview.component.html
+++ b/client/src/app/layouts/product-overview/product-overview.component.html
@@ -127,7 +127,7 @@
 
       <div class="flex gap-1">
         @for (size of product?.size; track product?._id) {
-        <div
+        <div (click)="getSizeFilters(size)" [class.bg-neutral-200]="sizes.has(size)"
           class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
           {{size}}
         </div>
@@ -137,17 +137,12 @@
 
     <div class="mt-6">
       <p class="pb-2 text-xs text-gray-500">Color</p>
-
       <div class="flex gap-1">
-        <div
-          class="h-8 w-8 cursor-pointer border border-white bg-gray-600 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
+        @for (color of product?.colors; track color) {
+        <div (click)="getColorFilters(color)" [style.background-color]='color' [class.opacity-75]="colors.has(color)"
+          class="h-8 w-8 cursor-pointer border border-white focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
         </div>
-        <div
-          class="h-8 w-8 cursor-pointer border border-white bg-violet-900 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
-        </div>
-        <div
-          class="h-8 w-8 cursor-pointer border border-white bg-red-900 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
-        </div>
+        }
       </div>
     </div>
 
@@ -180,12 +175,21 @@
 
         Add to cart
       </button>
-      <button class="flex h-12 w-1/3 items-center justify-center bg-amber-400 duration-100 hover:bg-yellow-300">
+      <button (click)="addProductToWishList(); wishListBtn = !wishListBtn;"
+        class="flex h-12 w-1/3 items-center justify-center bg-amber-400 duration-100 hover:bg-yellow-300">
+        @if (wishListBtn) {
+        <svg xmlns="http://www.w3.org/2000/svg" fill="red" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+          class="mr-3 h-4 w-4">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+        </svg>
+        } @else {
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
           class="mr-3 h-4 w-4">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
         </svg>
+        }
 
         Wishlist
       </button>
