--- a/client/src/app/components/product-form/product-form.component.html
+++ b/client/src/app/components/product-form/product-form.component.html
@@ -90,8 +90,8 @@
     <!-- Submit Button -->
     <div class="flex items-center justify-end">
       <button (click)="onSubmit()"
-        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-        type="submit">
+        class=" hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        type="submit" style="background-color: #4C1D95;">
         Save Product
       </button>
     </div>
