chore: minor changes

--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,19 +1,38 @@
-<footer class="mx-auto w-full max-w-[1200px] justify-between pb-10 flex flex-col lg:flex-row">
+<footer
+  class="mx-auto w-full max-w-[1200px] justify-between pb-10 flex flex-col lg:flex-row"
+>
   <div class="ml-5">
-    <img class="mt-10 mb-5" src="./assets/images/company-logo.svg" alt="company logo" />
+    <img
+      class="mt-10 mb-5"
+      src="./assets/images/company-logo.svg"
+      alt="company logo"
+    />
     <p class="pl-0">
-      Lorem ipsum dolor sit amet consectetur <br />
-      adipisicing elit.
+      This project is an online store web application that allows users to
+      browse products, add them to their cart,<br />
+      make orders, and manage their profiles.
     </p>
     <div class="mt-10 flex gap-3">
-      <a href="https://github.com/bbulakh">
-        <img class="h-5 w-5 cursor-pointer" src="./assets/images/github.svg" alt="github icon" />
+      <a href="#">
+        <img
+          class="h-5 w-5 cursor-pointer"
+          src="./assets/images/github.svg"
+          alt="github icon"
+        />
       </a>
-      <a href="https://t.me/b_bulakh">
-        <img class="h-5 w-5 cursor-pointer" src="./assets/images/telegram.svg" alt="telegram icon" />
+      <a href="#">
+        <img
+          class="h-5 w-5 cursor-pointer"
+          src="./assets/images/telegram.svg"
+          alt="telegram icon"
+        />
       </a>
-      <a href="https://www.linkedin.com/in/bogdan-bulakh-393284190/">
-        <img class="h-5 w-5 cursor-pointer" src="./assets/images/linkedin.svg" alt="twitter icon" />
+      <a href="#">
+        <img
+          class="h-5 w-5 cursor-pointer"
+          src="./assets/images/linkedin.svg"
+          alt="twitter icon"
+        />
       </a>
     </div>
   </div>
@@ -65,12 +84,26 @@
 <!-- Payment and copyright  -->
 
 <section class="h-11 bg-amber-400">
-  <div class="mx-auto flex max-w-[1200px] items-center justify-between px-4 pt-2">
-    <p>&copy; Bogdan Bulakh, 2023</p>
+  <div
+    class="mx-auto flex max-w-[1200px] items-center justify-between px-4 pt-2"
+  >
+    <p>&copy; 3ala Allah, 2024</p>
     <div class="flex items-center space-x-3">
-      <img class="h-8" src="https://cdn-icons-png.flaticon.com/512/5968/5968299.png" alt="Visa icon" />
-      <img class="h-8" src="https://cdn-icons-png.flaticon.com/512/349/349228.png" alt="AE icon" />
-      <img class="h-8" src="https://cdn-icons-png.flaticon.com/512/5968/5968144.png" alt="Apple pay icon" />
+      <img
+        class="h-8"
+        src="https://cdn-icons-png.flaticon.com/512/5968/5968299.png"
+        alt="Visa icon"
+      />
+      <img
+        class="h-8"
+        src="https://cdn-icons-png.flaticon.com/512/349/349228.png"
+        alt="AE icon"
+      />
+      <img
+        class="h-8"
+        src="https://cdn-icons-png.flaticon.com/512/5968/5968144.png"
+        alt="Apple pay icon"
+      />
     </div>
   </div>
 </section>
