feat: refactor structue for the featured products

--- a/client/src/app/layouts/home/home.component.html
+++ b/client/src/app/layouts/home/home.component.html
@@ -561,8 +561,8 @@
       </button>
     </div>
 
-    <img class="-mr-5 hidden w-[550px] object-cover md:block" src="./assets/images/sale-bage.jpeg"
-      alt="Rainbow credit card with macbook on a background" />
+    <img class="-mr-5 hidden w-[550px] object-cover md:block" src="./assets/images/creditImg.jpg"
+      alt="Credit card mockup image" />
   </section>
 </div>
 
